# preedit_tweak

./: CMakeLists.txt  LICENSE.txt  README.md
extra/archlinux/: PKGBUILD  PKGBUILD-gtk2  PKGBUILD-gtk3
po/: CMakeLists.txt  ja.po  preedit_tweak.pot
src/: config.h.in  gtk_compat.h  preedit_tweak.c
